# NHL_ML

./: .gitignore  README.md  example.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: pylint.yml
data/: processed_player_stats.csv
models/: nhl_point_predictor.joblib
nhl/: pyvenv.cfg
nhl/Scripts/: activate  activate.bat
src/nhl_ml/: __init__.py
src/nhl_ml/api/: __init__.py  nhl_api.py  team_stats.py
src/nhl_ml/data/: __init__.py  data_processor.py
src/nhl_ml/ml/: data_processor.py  example_usage.py  model_evaluation.py  train_model.py
src/nhl_ml/utils/: __init__.py  constants.py
tests/: __init__.py  test_data_processor.py  test_nhl_api.py
